--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
         # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.GHCR_PAT }}
         # Specifies whether the given registry is ECR (auto, true or false)
-        ecr: true
+        ecr: false
         # Log out from the Docker registry at the end of a job
         logout: true
     - name: Build the Docker image
