--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
         # Username used to log against the Docker registry
         username: ${{ github.actor }}
         # Password or personal access token used to log against the Docker registry
-        password: ${{ secrets.GHCR_PAT }}
+        password: ${{ secrets.RS_SECRET }}
         # Specifies whether the given registry is ECR (auto, true or false)
         ecr: false
         # Log out from the Docker registry at the end of a job
