--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,9 @@ jobs:
         # Log out from the Docker registry at the end of a job
         logout: true
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/my-image-name:latest
+
+    - name: Push Docker image
+      run: docker push ghcr.io/${{ github.repository_owner }}/my-image-name:latest
+
+
